# simple-rust-crawler

./: Cargo.toml
src/: main.rs
static/celebs/: README.md
static/docs/celeb-cards/: index.html
