[package]
name = "rust_crawler"
version = "0.1.0"
authors = ["Seong Hoon Wee <mrgravity817@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
select = "0.5.0"
rayon = { version = "*" }
